[package]
name = "league-client-connector"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"
description = "Rust implementation of lcu-connector. Retrieves lockfile information to access League of Legends API Client"
license = "MIT"
repository = "https://github.com/Potato-Gaming/league-client-connector"
keywords = ["league of legends", "league", "lol", "lcu-connector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6"