[package]
name = "league-client-connector"
version = "0.2.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Rust implementation of lcu-connector. Retrieves lockfile information to access League of Legends API Client"
license = "MIT"
repository = "https://github.com/Potato-Gaming/league-client-connector"
keywords = ["league", "legends", "league-of-legends", "lol", "lcu-connector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
base64 = "0.12"
regex = "1"
snafu = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
